// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore items without name 1`] = `
<ul>
  <li
    className=""
    key="Button"
  >
    <Styled(Link)
      className=""
      href="blank#button"
    >
      Button
    </Styled(Link)>
  </li>
</ul>
`;

exports[`should render sections with nested components 1`] = `
<ul>
  <li
    className=""
    key="Button"
  >
    <Styled(Link)
      className=""
      href="blank#button"
    >
      Button
    </Styled(Link)>
  </li>
  <li
    className=""
    key="Input"
  >
    <Styled(Link)
      className=""
      href="blank#input"
    >
      Input
    </Styled(Link)>
  </li>
</ul>
`;
